--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,4 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: Jost;
+}
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
+:root {
+  --color-primary: #775ce5;
+}
+
+.page {
+  /* max-width: 400px; */
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
