--- a/front/src/component/page-content/index.css
+++ b/front/src/component/page-content/index.css
@@ -1,12 +1,16 @@
 .page__content {
   display: flex;
+  gap: 20px;
   max-width: 600px;
   width: 100%;
   height: 100vh;
   flex-direction: column;
-  justify-content: space-between;
+
   align-items: center;
   overflow: hidden;
-  margin-top: 20%;
   padding: 5%;
+}
+
+.page__content--between {
+  justify-content: space-between;
 }
