--- a/front/src/index.css
+++ b/front/src/index.css
@@ -29,3 +29,15 @@ body,
   flex-direction: column;
   align-items: center;
 }
+
+.click {
+  cursor: pointer;
+  transition: opacity 0.4s;
+}
+
+.click:hover {
+  opacity: 0.7;
+}
+.click:active {
+  opacity: 0.5;
+}
