--- a/front/src/page/welcome/index.css
+++ b/front/src/page/welcome/index.css
@@ -1,7 +1,7 @@
 .page {
   /* max-width: 100%; */
-  height: 100vh;
-  overflow: hidden;
+  /* height: 100vh; */
+  overflow-x: hidden;
 }
 .background__img {
   position: absolute;
