--- a/front/src/component/balance-actions/index.css
+++ b/front/src/component/balance-actions/index.css
@@ -3,13 +3,18 @@
   width: 100%;
   justify-content: center;
   position: absolute;
-  bottom: -37px;
+  bottom: -65px;
   left: 0;
   right: 0;
   gap: 12px;
 }
 
-.balance__actions > img {
+.balance__actions__item {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.balance__actions__item > img {
   cursor: pointer;
   background-color: #5b94e9;
   border-radius: 100px;
@@ -17,4 +22,7 @@
   padding: 12px;
   width: 30px;
   box-sizing: content-box;
+}
+.balance__actions__item > span {
+  text-align: center;
 }
