--- a/front/src/component/alert/index.css
+++ b/front/src/component/alert/index.css
@@ -11,3 +11,8 @@
   background: rgba(242, 136, 61, 0.1);
   color: #f2883d;
 }
+.alert--ok {
+  background: rgba(164, 242, 61, 0.7);
+
+  color: rgb(26, 9, 125);
+}
