--- a/front/src/page/welcome/index.css
+++ b/front/src/page/welcome/index.css
@@ -1,7 +1,6 @@
 .page {
-  /* max-width: 100%; */
-  /* height: 100vh; */
   overflow-x: hidden;
+  background-color: transparent;
 }
 .background__img {
   position: absolute;
