--- a/front/src/page/welcome/index.css
+++ b/front/src/page/welcome/index.css
@@ -1,6 +1,13 @@
 .welcome {
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: transparent;
+  position: relative;
+}
+.money__img {
+  position: absolute;
+  rotate: -45deg;
+  right: -200px;
+  top: 100px;
 }
 .background__img {
   position: absolute;
@@ -9,7 +16,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 70%;
+  height: 583px;
   border-radius: 0px 0px 48px 48px;
   z-index: -1;
   overflow: hidden;
@@ -34,6 +41,6 @@
 .form {
   display: grid;
   gap: 16px;
-  padding-bottom: 20%;
+  padding-bottom: 20px;
   width: 100%;
 }
