--- a/front/src/page/welcome/index.css
+++ b/front/src/page/welcome/index.css
@@ -5,7 +5,7 @@
 }
 .money__img {
   position: absolute;
-  rotate: -45deg;
+  transform: rotate(-45deg);
   right: -200px;
   top: 100px;
 }
@@ -16,10 +16,23 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 583px;
+  height: 70%;
+  max-height: 583px;
   border-radius: 0px 0px 48px 48px;
   z-index: -1;
   overflow: hidden;
+}
+
+@media only screen and (max-height: 800px) {
+  .money__img {
+    right: -58px;
+    top: 200px;
+    width: auto;
+    height: 300px;
+  }
+  .background__img {
+    max-height: 400px;
+  }
 }
 
 .heading {
